--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
   "dependencies": {
     "mongodb": "^4.1.3",
     "next": "latest",
+    "next-connect": "^0.12.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24"
   }
 }
