--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next-connect": "^0.12.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-toastify": "^9.0.4",
     "sitemap": "^7.1.1"
   },
   "devDependencies": {
